--- a/Nivell_2/css/styles2.css
+++ b/Nivell_2/css/styles2.css
@@ -21,34 +21,39 @@ header{
     height: 400px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     gap: 20px;
 }
 
 .navbar_container{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
     padding: 30px;
 }
-
 .navbar{
-    padding: 10px 20px;
+    display: flex;
+    align-items: center;
+}
+
+.logo{
+    width: 80px;
+    height: 80px;
+    animation: logoIn 1.5s ease-out forwards;
 }
 
 .navbar_menu{
-    flex-grow: 1;
-    margin: 0 20px;
+    margin: 0 auto;
     text-align: center;
-    font-size: 14px;
+    font-size: 18px;
     display: flex;
     flex-direction: row;
     justify-content: center;
+    animation: navbarIn 1.6s ease-out forwards;
 }
 
 .navbar a{
     text-decoration: none;
-    padding: 20px 20px;
+    padding: 10px 20px;
     color: black;
     font-weight: 700;
 }
@@ -56,7 +61,8 @@ header{
 .navbar_social{
     display: flex;
     flex-direction: row;
-    gap: 5px;
+    font-size: 20px;
+    animation: navbarSocialIn 1.5s ease-out forwards;
 }
 
 .navbar_menu a:hover{
@@ -71,10 +77,6 @@ header{
     transform: scale(1.4);
 }
 
-.navbar_logo, .navbar_social, .navbar_menu{
-    padding: 10px 40px;
-}
-
 .banner_container{
     display: flex;
     align-items: flex-end;
@@ -85,7 +87,7 @@ header{
 
 .banner_interior{
     background-color: rgb(216, 215, 215);
-    opacity: 0.8;;
+    opacity: 0.8;
     color: rgb(222, 123, 105);
     font-size: 20px;
     font-weight: 700; 
@@ -116,28 +118,32 @@ main{
 .articles{
     background-color: rgb(244,241,241);
     padding: 10px;
-    max-height: 750px;
     width: 100%;
 }
 
 .articles img{
     width: 100%;
     height: auto;
-    display: block;
-    margin: 0 auto;
 }
 
 .span_date{
     position: relative;
     left: 15px;
     color: wheat;
-    font-weight: 700;;
+    font-weight: 700;
     bottom: 30px;
 }
 .article_nav{
     background-color: rgb(124, 161, 193);
     grid-column: span 2;
     max-width: 100%;
+}
+
+.article_blog:hover{
+    cursor: pointer;
+    transform: scale(1.02);
+    transition: all 0.3s ease;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .articles h2{
@@ -174,7 +180,7 @@ main{
     text-align: center;
 }
 .publi_title{
-    font-weight: 700;;
+    font-weight: 700;
 }
 
 footer{
@@ -190,16 +196,53 @@ footer{
     padding: 10px;
 }
 
+@keyframes logoIn{
+    from{
+        transform: translateX(-700%);
+    }
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+@keyframes navbarIn{
+    from{
+        transform: translateY(-200%);
+        opacity: 0;
+    }
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+@keyframes navbarSocialIn{
+    from{
+        transform: translateX(700%);
+        opacity: 0;
+    }
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
 @media (max-width: 768px){
+    .banner_interior{
+        font-size: 12px;
+        font-weight: 700; 
+        text-align: center;
+        padding: 55px 30px;
+        margin: 0 auto;
+        width: 70%;
+}
+
     .navbar_container{
         flex-direction: column;
         gap: 10px;
-        text-align: left;
-    }
-
-    .navbar_menu{
-        margin: 0;
-        text-align: left;
+        align-items: center;
+        justify-content: space-evenly;
     }
 
     main{
@@ -224,15 +267,29 @@ footer{
 }
 
 @media (max-width: 1024px){
+
+    .logo{
+        width: 40px;
+        height: 40px;
+    }
+
     .navbar_container{
         flex-direction: column;
-        gap: 10px;
-        text-align: left;
+        align-items: center;
+        gap: 15px;
     }
 
     .navbar_menu{
-        margin: 0;
-        text-align: left;
+        font-size: 14px;
+    }
+
+    .navbar_social{
+        font-size: 18px;
+    }
+
+    .banner_interior{
+        font-size: 16px;
+        padding: 55px 30px;
     }
 
     main{
